# odoo-hackathon-2026

./: .env.example  .gitignore  README.md  allocation-transfer.html  assets-directory.html  audit.html  dashboard.html  docker-compose.yml  index.html  maintenance.html  notifications.html  organization-setup.html  pyproject.toml  reports.html  resource-booking.html  scratch_pdf_text.txt
app/: main.py
assetflow_backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
assetflow_backend/app/: main.py
assetflow_backend/app/api/: __init__.py
assetflow_backend/app/core/: config.py
assetflow_backend/app/database/: base.py  models_registry.py  session.py
assetflow_backend/app/modules/activity/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
assetflow_backend/app/modules/allocations/: models.py  repository.py  router.py  schemas.py  service.py
assetflow_backend/app/modules/assets/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
assetflow_backend/app/scripts/: bootstrap_admin.py
assetflow_backend/assetflow_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
assetflow_backend/frontend/: organization-setup.html  reports.html  signup.html
assetflow_backend/migrations/: env.py
assetflow_backend/migrations/versions/: 32bc8f422613_drop_unused_assets_department_id_never_.py  4ea336edc49d_add_activity_logs_table.py  56ebd9bf62e1_add_allocations_table.py  646bc8483051_add_bookings_table.py  6eca70242bdb_add_assets_table.py  8f4d2a1c9b70_complete_required_workflows.py  d9b7deeea5e9_baseline_users_departments_asset_.py
assetflow_backend/tests/: conftest.py  test_booking_concurrency.py  test_maintenance_state_machine.py  test_return_workflow.py
(+112 files in other folders)
