[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assetflow-backend"
version = "0.1.0"
description = "FastAPI backend for AssetFlow"
readme = "README.md"
requires-python = ">=3.12"

# Keep runtime dependencies limited to the backend stack that is typically
# required for a FastAPI service with database migrations and typed settings.
dependencies = [
    "fastapi>=0.139,<1.0",
    "uvicorn>=0.50,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "aiomysql>=0.2,<1.0",
    "alembic>=1.18,<2.0",
    "pydantic-settings>=2.14,<3.0",
    "python-dotenv>=1.2,<2.0",
    "email-validator>=2.3,<3.0",
    "passlib[argon2]>=1.7,<2.0",
    "python-multipart>=0.0.22,<1.0",
]

[project.optional-dependencies]
dev = [
    "black>=26.0,<27.0",
    "ruff>=0.15,<0.16",
    "mypy>=2.2,<3.0",
    "pytest>=9.1,<10.0",
    "pytest-asyncio>=1.4,<2.0",
    "httpx>=0.28,<1.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
files = ["app", "tests"]
ignore_missing_imports = false
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
pretty = true
